--- a/WebApplication2/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2/WebApplication2.csproj
@@ -256,14 +256,15 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Views\Trainer\Index.cshtml" />
     <Content Include="Views\Trainer\ExcerciseList.cshtml" />
-    <Content Include="Views\Trainer\CreateExcercise.cshtml" />
-    <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Trainer\TrainingPlanList.cshtml" />
+    <Content Include="Views\Trainer\CreateExcercise.cshtml" />
+    <Content Include="Views\Trainer\TrainingTypeList.cshtml" />
+    <Content Include="Views\Trainer\TrainingTypeCreate.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
