--- a/WebApplication2/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2/WebApplication2.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Models\TrainingSessionsInPlan.cs" />
     <Compile Include="Models\TrainingType.cs" />
     <Compile Include="Models\Users.cs" />
+    <Compile Include="Models\ViewModels\PlanViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -267,6 +268,8 @@
     <Content Include="Views\Trainer\TrainingTypeList.cshtml" />
     <Content Include="Views\Trainer\TrainingTypeCreate.cshtml" />
     <Content Include="Views\Trainer\CreatePlan.cshtml" />
+    <Content Include="Views\Trainer\EditPlan.cshtml" />
+    <Content Include="Views\Trainer\_TrainingSession.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
