--- a/WebApplication2/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2/WebApplication2.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Models\TrainingSessionsInPlan.cs" />
     <Compile Include="Models\TrainingType.cs" />
     <Compile Include="Models\Users.cs" />
+    <Compile Include="Models\ViewModels\CreatePlanViewModel.cs" />
     <Compile Include="Models\ViewModels\PlanViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -270,6 +271,7 @@
     <Content Include="Views\Trainer\CreatePlan.cshtml" />
     <Content Include="Views\Trainer\EditPlan.cshtml" />
     <Content Include="Views\Trainer\_TrainingSession.cshtml" />
+    <Content Include="Views\Trainer\AddExcerciseToPlan.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
