--- a/WebApplication2/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2/WebApplication2.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SharedController.cs" />
     <Compile Include="Controllers\TrainerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -213,6 +214,7 @@
     <Compile Include="Models\TrainingSessionsInPlan.cs" />
     <Compile Include="Models\TrainingType.cs" />
     <Compile Include="Models\Users.cs" />
+    <Compile Include="Models\ViewModels\ChoosTrainerViewModel.cs" />
     <Compile Include="Models\ViewModels\CreatePlanViewModel.cs" />
     <Compile Include="Models\ViewModels\PlanViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -278,6 +280,10 @@
     <Content Include="Views\Client\TrainingPlan.cshtml" />
     <Content Include="Views\Client\_TrainingSession.cshtml" />
     <Content Include="Views\Client\ChoosPlan.cshtml" />
+    <Content Include="Views\Shared\DetilesPlan.cshtml" />
+    <Content Include="Views\Shared\_TrainingSession.cshtml" />
+    <Content Include="Views\Client\Trainer.cshtml" />
+    <Content Include="Views\Client\ChoosTrainer.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
