--- a/WebApplication2/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2/WebApplication2.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Models\TrainingSessionsInPlan.cs" />
     <Compile Include="Models\TrainingType.cs" />
     <Compile Include="Models\Users.cs" />
+    <Compile Include="Models\ViewModels\AddResult.cs" />
     <Compile Include="Models\ViewModels\ChoosTrainerViewModel.cs" />
     <Compile Include="Models\ViewModels\CreatePlanViewModel.cs" />
     <Compile Include="Models\ViewModels\PlanViewModel.cs" />
@@ -284,6 +285,7 @@
     <Content Include="Views\Shared\_TrainingSession.cshtml" />
     <Content Include="Views\Client\Trainer.cshtml" />
     <Content Include="Views\Client\ChoosTrainer.cshtml" />
+    <Content Include="Views\Client\AddTrainingResult.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
