--- a/WebApplication2/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2/WebApplication2.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Models\ViewModels\ChoosTrainerViewModel.cs" />
     <Compile Include="Models\ViewModels\CreatePlanViewModel.cs" />
     <Compile Include="Models\ViewModels\MessangerViewModel.cs" />
+    <Compile Include="Models\ViewModels\PlanHelperViewModel.cs" />
     <Compile Include="Models\ViewModels\PlanViewModel.cs" />
     <Compile Include="Models\ViewModels\ResultsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -292,6 +293,8 @@
     <Content Include="Views\Trainer\ClientsList.cshtml" />
     <Content Include="Views\Shared\Messanger.cshtml" />
     <Content Include="Views\Shared\SendMessage.cshtml" />
+    <Content Include="Views\Client\NoResult.cshtml" />
+    <Content Include="Views\Client\PlanHelper.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
